--- a/public/css/app.css
+++ b/public/css/app.css
@@ -930,6 +930,9 @@ html {
     transform: rotate(360deg);
   }
 }
+.btn-group {
+  display: inline-flex;
+}
 .btn-group > input[type="radio"].btn {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -1446,6 +1449,21 @@ html {
 .navbar-end {
   width: 50%;
   justify-content: flex-end;
+}
+.radio {
+  flex-shrink: 0;
+  --chkbg: var(--bc);
+  height: 1.5rem;
+  width: 1.5rem;
+  cursor: pointer;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border-radius: 9999px;
+  border-width: 1px;
+  border-color: hsl(var(--bc) / var(--tw-border-opacity));
+  --tw-border-opacity: 0.2;
+  transition: background, box-shadow var(--animation-input, 0.2s) ease-in-out;
 }
 .select {
   display: inline-flex;
@@ -2203,15 +2221,6 @@ html {
   outline: 2px solid hsla(var(--bc) / 0.2);
   outline-offset: 2px;
 }
-.input-ghost {
-  --tw-bg-opacity: 0.05;
-}
-.input-ghost:focus {
-  --tw-bg-opacity: 1;
-  --tw-text-opacity: 1;
-  color: hsl(var(--bc) / var(--tw-text-opacity));
-  box-shadow: none;
-}
 .input-error {
   --tw-border-opacity: 1;
   border-color: hsl(var(--er) / var(--tw-border-opacity));
@@ -2427,6 +2436,21 @@ html {
     left: 107%;
   }
 }
+.radio:focus-visible {
+  outline: 2px solid hsl(var(--bc));
+  outline-offset: 2px;
+}
+.radio:checked,
+  .radio[aria-checked=true] {
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--bc) / var(--tw-bg-opacity));
+  animation: radiomark var(--animation-input, 0.2s) ease-in-out;
+  box-shadow: 0 0 0 4px hsl(var(--b1)) inset, 0 0 0 4px hsl(var(--b1)) inset;
+}
+.radio:disabled {
+  cursor: not-allowed;
+  opacity: 0.2;
+}
 @keyframes radiomark {
 
   0% {
@@ -2625,6 +2649,13 @@ html {
 .textarea:focus {
   outline: 2px solid hsla(var(--bc) / 0.2);
   outline-offset: 2px;
+}
+.textarea-error {
+  --tw-border-opacity: 1;
+  border-color: hsl(var(--er) / var(--tw-border-opacity));
+}
+.textarea-error:focus {
+  outline: 2px solid hsl(var(--er));
 }
 .textarea-disabled,
   .textarea[disabled] {
@@ -2833,14 +2864,6 @@ html {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.input-xs {
-  height: 1.5rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  font-size: 0.75rem;
-  line-height: 1rem;
-  line-height: 1.625;
-}
 .input-sm {
   height: 2rem;
   padding-left: 0.75rem;
@@ -3008,11 +3031,6 @@ html {
   border-bottom-left-radius: var(--rounded-box, 1rem);
   border-bottom-right-radius: var(--rounded-box, 1rem);
 }
-.table-compact :where(th, td) {
-  padding: 0.5rem;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
 .fixed {
   position: fixed;
 }
@@ -3066,17 +3084,13 @@ html {
   margin-top: 0px;
   margin-bottom: 0px;
 }
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+}
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .mx-32 {
   margin-left: 8rem;
@@ -3096,6 +3110,9 @@ html {
 }
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+.ml-3 {
+  margin-left: 0.75rem;
 }
 .mt-3 {
   margin-top: 0.75rem;
@@ -3117,9 +3134,6 @@ html {
 }
 .mb-6 {
   margin-bottom: 1.5rem;
-}
-.ml-3 {
-  margin-left: 0.75rem;
 }
 .-ml-px {
   margin-left: -1px;
@@ -3178,17 +3192,8 @@ html {
 .w-1\/3 {
   width: 33.333333%;
 }
-.w-2\/12 {
-  width: 16.666667%;
-}
-.w-1\/12 {
-  width: 8.333333%;
-}
-.w-3\/12 {
-  width: 25%;
-}
-.w-6\/12 {
-  width: 50%;
+.w-80 {
+  width: 20rem;
 }
 .w-5 {
   width: 1.25rem;
@@ -3202,17 +3207,53 @@ html {
 .w-6 {
   width: 1.5rem;
 }
-.w-9\/12 {
-  width: 75%;
+.w-\[20\%\] {
+  width: 20%;
+}
+.w-\[80\%\] {
+  width: 80%;
+}
+.w-\[5\%\] {
+  width: 5%;
+}
+.w-\[30\%\] {
+  width: 30%;
+}
+.w-\[15\%\] {
+  width: 15%;
+}
+.w-\[50\%\] {
+  width: 50%;
+}
+.w-\[35\%\] {
+  width: 35%;
+}
+.w-\[25\%\] {
+  width: 25%;
+}
+.w-1\/12 {
+  width: 8.333333%;
+}
+.w-3\/12 {
+  width: 25%;
+}
+.w-2\/12 {
+  width: 16.666667%;
 }
 .w-96 {
   width: 24rem;
+}
+.w-6\/12 {
+  width: 50%;
 }
 .w-8 {
   width: 2rem;
 }
 .max-w-\[75px\] {
   max-width: 75px;
+}
+.max-w-\[100px\] {
+  max-width: 100px;
 }
 .max-w-sm {
   max-width: 24rem;
@@ -3222,6 +3263,9 @@ html {
 }
 .max-w-\[150px\] {
   max-width: 150px;
+}
+.max-w-xs {
+  max-width: 20rem;
 }
 .max-w-\[300px\] {
   max-width: 300px;
@@ -3241,6 +3285,9 @@ html {
 }
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.cursor-pointer {
+  cursor: pointer;
 }
 .cursor-default {
   cursor: default;
@@ -3294,9 +3341,6 @@ html {
 }
 .overflow-hidden {
   overflow: hidden;
-}
-.overflow-x-auto {
-  overflow-x: auto;
 }
 .scroll-smooth {
   scroll-behavior: smooth;
@@ -3359,6 +3403,10 @@ html {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--p) / var(--tw-bg-opacity));
+}
 .bg-slate-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
@@ -3374,10 +3422,6 @@ html {
 .bg-slate-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
-}
-.bg-primary {
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--p) / var(--tw-bg-opacity));
 }
 .bg-error {
   --tw-bg-opacity: 1;
@@ -3425,6 +3469,10 @@ html {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 .px-6 {
   padding-left: 1.5rem;
@@ -3474,6 +3522,9 @@ html {
 .text-center {
   text-align: center;
 }
+.align-middle {
+  vertical-align: middle;
+}
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -3520,6 +3571,10 @@ html {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-error {
+  --tw-text-opacity: 1;
+  color: hsl(var(--er) / var(--tw-text-opacity));
+}
 .text-base-content {
   --tw-text-opacity: 1;
   color: hsl(var(--bc) / var(--tw-text-opacity));
@@ -3531,10 +3586,6 @@ html {
 .text-slate-800 {
   --tw-text-opacity: 1;
   color: rgb(30 41 59 / var(--tw-text-opacity));
-}
-.text-error {
-  --tw-text-opacity: 1;
-  color: hsl(var(--er) / var(--tw-text-opacity));
 }
 .text-neutral-content {
   --tw-text-opacity: 1;
@@ -3622,7 +3673,7 @@ html {
 
     .table :where(thead, tbody) :where(td) {
         --tw-bg-opacity: 1;
-        background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+        /* background-color: rgb(248 250 252 / var(--tw-bg-opacity)); */
     }
 }
 
@@ -3635,7 +3686,7 @@ html {
 
     .table :where(thead, tbody) :where(td) {
         --tw-bg-opacity: 1;
-        background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+        /* background-color: rgb(248 250 252 / var(--tw-bg-opacity)); */
     }
 }
 
@@ -3784,6 +3835,10 @@ html {
     visibility: hidden;
   }
 
+  .md\:h-6 {
+    height: 1.5rem;
+  }
+
   .md\:h-12 {
     height: 3rem;
   }
@@ -3796,16 +3851,20 @@ html {
     width: 33.333333%;
   }
 
+  .md\:w-1\/4 {
+    width: 25%;
+  }
+
+  .md\:w-6 {
+    width: 1.5rem;
+  }
+
   .md\:w-1\/2 {
     width: 50%;
   }
 
   .md\:w-3\/4 {
     width: 75%;
-  }
-
-  .md\:w-1\/4 {
-    width: 25%;
   }
 
   .md\:w-12 {
@@ -3917,14 +3976,6 @@ html {
     line-height: 2;
   }
 
-  .md\:input-sm {
-    height: 2rem;
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-    font-size: 0.875rem;
-    line-height: 2rem;
-  }
-
   .md\:modal-middle {
     align-items: center;
   }
@@ -3964,6 +4015,10 @@ html {
 
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:w-3\/4 {
+    width: 75%;
   }
 
   .lg\:text-5xl {
